new timer supporting both ir and 433, site server side working

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -121,7 +121,7 @@
                         <button type="button" class="btn btn-primary" ng-click="performAction(device, function)" ng-if="function.toLowerCase() != 'on' && function.toLowerCase() != 'off'">{{function}}</button>
                     </td>
                     <td>
-                        <button ng-if="device.functions.length > 2" type="button" class="btn btn-primary" ng-click="openDeviceModal(device)">More</button>
+                        <button type="button" class="btn btn-primary" ng-click="openDeviceModal(device)">More</button>
                     </td>
                 </tr>
             </table>
