--- a/site/public/deviceModal.html
+++ b/site/public/deviceModal.html
@@ -11,6 +11,9 @@
                         <button type="button" class="btn btn-danger" ng-click="performAction(device, function)" ng-if="function.toLowerCase() == 'off'">{{function}}</button>
                         <button type="button" class="btn btn-primary" ng-click="performAction(device, function)" ng-if="function.toLowerCase() != 'on' && function.toLowerCase() != 'off'">{{function}}</button>
                     </td>
+                    <td>
+                        <button type="button" class="btn btn-secondary" ng-click="openTimerModal(device, function)" >Timer</button>
+                    </td>
                 </tr>
             </table>
 </div>
