--- a/site/public/index.html
+++ b/site/public/index.html
@@ -104,21 +104,16 @@
     </nav>
     <div class="container">
 
-        <!-- HEADER AND TODO COUNT -->
-        <div class="jumbotron text-center">
-            <h1>Device List
-                <span class="label label-info">{{ devices.length }}</span>
-            </h1>
-        </div>
+        
         <div ng-repeat="location in locations" id="{{location}}" class="row">
             <h2>{{location}}</h2>
             <table class="table table-sm table-striped">
-                <tr ng-repeat="device in devices" ng-if="device.location == location || location == 'All'">
+                <tr ng-repeat="device in devices" ng-if="(device.location == location && device.type != 'rPI' && device.type != 'Windows') || (location =='Computers' && (device.type == 'rPI' || device.type == 'Windows')) || location == 'All'">
                     <td>{{device.name}}</td>
                     <td ng-repeat="function in device.functions.slice(0,2)">
                         <button type="button" class="btn btn-success" ng-click="performAction(device, function)" ng-if="function.toLowerCase() == 'on'">{{function}}</button>
                         <button type="button" class="btn btn-danger" ng-click="performAction(device, function)" ng-if="function.toLowerCase() == 'off'">{{function}}</button>
-                        <button type="button" class="btn btn-primary" ng-click="performAction(device, function)" ng-if="function.toLowerCase() != 'on' && function.toLowerCase() != 'off'">{{function}}</button>
+                        <button type="button" class="btn btn-info" ng-click="performAction(device, function)" ng-if="function.toLowerCase() != 'on' && function.toLowerCase() != 'off'">{{function}}</button>
                     </td>
                     <td>
                         <button type="button" class="btn btn-primary" ng-click="openDeviceModal(device)">More</button>
