bug fixing and removing unneccesary rows

--- a/site/public/deviceModal.html
+++ b/site/public/deviceModal.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body" id="modal-body">
     <table class="table table-sm table-striped">
-        <tr>
+        <tr ng-if="lines.length > 0">
                 <td colspan="2" style="text-align: center;" >
                         <table class="table table-borderless">                    
                             <tr ng-repeat="line in lines"> 
