--- a/site/public/timerModal.html
+++ b/site/public/timerModal.html
@@ -5,10 +5,10 @@
     <table class="table table-sm table-striped">
         <tr>
             <td>
-                Minutes:
+                    <div class="col-form-label">Minutes:</div>
             </td>
             <td>
-                <input type="tel" id="minutes" ng-model="minutes" />
+                <input class="form-control" type="tel" id="minutes" ng-model="minutes" />
             </td>
             <td>
                 <button class="btn btn-success" type="button" ng-click="createTimer(device, func);closeModal()">Set</button>
