--- a/site/public/index.html
+++ b/site/public/index.html
@@ -83,6 +83,9 @@
         .navbar-nav li {
             display: inline-block;
         }
+        .btn {
+            min-width: 75px;
+        }
     </style>
 
     <!-- load jquery -->
@@ -108,7 +111,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <ul class="nav navbar-nav scroll">
-                <li ng-repeat="location in locations">
+                <li ng-repeat="location in locations | orderBy">
                     <a class="nav-link" href="#{{location}}">{{location}}</a>
                 </li>
             </ul>
@@ -117,10 +120,10 @@
     <div class="container">
 
 
-        <div ng-repeat="location in locations" id="{{location}}" class="row">
+        <div ng-repeat="location in locations | orderBy" id="{{location}}" class="row">
             <h2>{{location}}</h2>
             <table class="table table-sm table-striped">
-                <tr ng-repeat="device in devices" ng-if="(location != 'Timers' && device.location == location && device.type != 'rPI') || (location =='Computers' && (device.type == 'rPI' || device.name == 'PC')) || location == 'All'">
+                <tr ng-repeat="device in devices | orderBy : 'name'" ng-if="(location != 'Timers' && device.location == location && device.type != 'rPI') || (location =='Computers' && (device.type == 'rPI' || device.name == 'PC')) || location == 'All'">
                     <td>{{device.name}}</td>
                     <td ng-repeat="function in device.functions.slice(0,2)">
                         <button type="button" class="btn btn-success" ng-click="performAction(device, function)" ng-if="function.toLowerCase() == 'on'">{{function}}</button>
@@ -135,7 +138,7 @@
                     </td>
                 </tr>
                 <tr ng-repeat="timer in timers" ng-if="location == 'Timers'">
-                    <td>{{timer.date.toString()}}</td>
+                    <td>{{timer.date}}</td>
                     <td>{{timer.device}}</td>
                     <td>{{timer.action}}</td>
                     <td><button type="button" class="btn btn-danger" ng-click="deleteTimer(timer)">Delete</button></td>
