--- a/site/public/index.html
+++ b/site/public/index.html
@@ -133,6 +133,9 @@
                     <td ng-if="device.functions.length < 2">
 
                     </td>
+                    <td ng-if="device.functions.length < 1">
+
+                    </td>
                     <td>
                         <button type="button" class="btn btn-primary" ng-click="openDeviceModal(device)">More</button>
                     </td>
