--- a/site/public/mediaModal.html
+++ b/site/public/mediaModal.html
@@ -8,9 +8,9 @@
                     <table class="table table-borderless">                    
                         <tr ng-repeat="line in lines"> 
                             <td ng-repeat="action in actions" ng-if="$index >= line * 3 - 3 && $index < line * 3">
-                                <button ng-if="$index % 2 == 0 && action != '' && action != 'Set Volume'" type="button" class="btn btn-info" ng-click="mediaAction(device, action)">{{action}}</button>
-                                <button ng-if="$index % 2 == 1 && action != '' && action != 'Set Volume'" type="button" class="btn btn-warning" ng-click="mediaAction(device, action)">{{action}}</button>
-                                <input id="volumeSlider" style="-webkit-appearance: slider-vertical" ng-change="mediaAction('Set Value', setVolume)" ng-model="setVolume" ng-if="action=='Set Volume'" class="input-range" orient="vertical" type="range" step="1" value="50" min="0" max="100">
+                                <button ng-if="$index % 2 == 0 && action != '' && action != 'Set Volume'" type="button" class="btn btn-info" ng-click="mediaAction(action)">{{action}}</button>
+                                <button ng-if="$index % 2 == 1 && action != '' && action != 'Set Volume'" type="button" class="btn btn-warning" ng-click="mediaAction(action)">{{action}}</button>
+                                <input id="volumeSlider" style="-webkit-appearance: slider-vertical" ng-change="mediaAction('Set Volume', setVolume)" ng-model="setVolume" ng-if="action=='Set Volume'" class="input-range" orient="vertical" type="range" step="1" min="0" max="100">
                             </td>                        
                         </tr>                    
                     </table>
@@ -21,10 +21,14 @@
                     <div class="col-form-label">Music:</div>
             </td>
             <td>
-                <input class="form-control" type="tel" id="minutes" ng-model="file" />
+                <input id="musicFilter" ng-model="mfilter">
             </td>
+        </tr>
+    </table>
+    <table ng-if="mfilter.length > 3" class="table table-sm table-striped" ng-if="musicDir">
+        <tr ng-repeat="item in musicDir| filter : mfilter">
             <td>
-                <button class="btn btn-success" type="button" ng-click="playMusic(device, file);">Play</button>
+                <span ng-click="playMusic(item)">{{item}}</span>
             </td>
         </tr>
     </table>
