--- a/site/public/mediaModal.html
+++ b/site/public/mediaModal.html
@@ -8,9 +8,9 @@
                     <table class="table table-borderless">                    
                         <tr ng-repeat="line in lines"> 
                             <td ng-repeat="action in actions" ng-if="$index >= line * 3 - 3 && $index < line * 3">
-                                <button ng-if="$index % 2 == 0 && action != '' && action != 'Set Volume'" type="button" class="btn btn-info" ng-click="mediaAction(action)">{{action.replace('Volume', 'Vol')}}</button>
-                                <button ng-if="$index % 2 == 1 && action != '' && action != 'Set Volume'" type="button" class="btn btn-warning" ng-click="mediaAction(action)">{{action.replace('Volume', 'Vol')}}</button>
-                                <input id="volumeSlider" style="-webkit-appearance: slider-vertical" ng-change="mediaAction('Set Volume', setVolume)" ng-model="setVolume" ng-if="action=='Set Volume'" class="input-range" orient="vertical" type="range" step="1" min="0" max="100">
+                                <button ng-if="$index % 2 == 0 && action != '' && action != 'Set Volume'" type="button" class="btn btn-info" ng-click="mediaAction(action, 'force')">{{action.replace('Volume', 'Vol')}}</button>
+                                <button ng-if="$index % 2 == 1 && action != '' && action != 'Set Volume'" type="button" class="btn btn-warning" ng-click="mediaAction(action, 'force')">{{action.replace('Volume', 'Vol')}}</button>
+                                <input id="volumeSlider" style="-webkit-appearance: slider" ng-change="mediaAction('Set Volume', setVolume)" ng-model="setVolume" ng-if="action=='Set Volume'" class="input-range" orient="vertical" type="range" step="1" min="0" max="100">
                             </td>                        
                         </tr>                    
                     </table>
@@ -28,7 +28,8 @@
     <table ng-if="mfilter.length > 3" class="table table-sm table-striped" ng-if="musicDir">
         <tr ng-repeat="item in musicDir| musicFilter : mfilter">
             <td>
-                <span ng-click="playMusic(item)">{{item.substring(7)}}</span>
+		<span ng-if="item.substring(item.length - 3) == 'm3u'" ng-click="playMusic(item)" style="color:blue">{{item.substring(7)}}</span>
+                <span ng-click="playMusic(item)" ng-if="item.substring(item.length - 3) != 'm3u'">{{item.substring(7)}}</span>
             </td>
         </tr>
     </table>
