overflowing long search results on media modal

--- a/site/public/mediaModal.html
+++ b/site/public/mediaModal.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
     <h3 class="modal-title" id="modal-title">{{device.name}} {{func}}</h3>
 </div>
-<div class="modal-body" id="modal-body">
+<div class="modal-body" id="modal-body" style="overflow-x:auto">
     <table class="table table-sm table-striped">
         <tr ng-if="lines.length > 0">
             <td colspan="2" style="text-align: center;" >
