--- a/site/public/mediaModal.html
+++ b/site/public/mediaModal.html
@@ -41,6 +41,9 @@
 		<span ng-if="item.substring(item.length - 3) == 'm3u'" ng-click="playMusic(item)" style="color:blue">{{item.substring(7)}}</span>
                 <span ng-click="playMusic(item)" ng-if="item.substring(item.length - 3) != 'm3u'">{{item.substring(7)}}</span>
             </td>
+	    <td ng-if="item.substring(item.length - 3) == 'm3u'">
+		    <button type="button" class="btn btn-warning" ng-click="shuffleMusic(item)"><span class="glyphicon glyphicon-random"></span></button>
+	    </td>
             <td><button type=" button " class="btn btn-success " ng-click="queueMusic(item)"><span class=" glyphicon glyphicon-list"></span></button></td>
         </tr>
     </table>
