--- a/site/public/index.html
+++ b/site/public/index.html
@@ -142,6 +142,14 @@
 		<tr ng-if="location == 'Admin'">
                     <td>Show Config</td>
                     <td><button type="button" class="btn btn-danger" ng-click="openConfigModal()">Config</button></td>
+		</tr>
+		<tr ng-if="location == 'Admin'">
+		    <td>Restart Server</td>
+                    <td><button type="button" class="btn btn-danger" ng-click="restartServer()">Restart</button></td>
+                </tr>
+		<tr ng-if="location == 'Admin'">
+                    <td>Update PIs</td>
+                    <td><button type="button" class="btn btn-danger" ng-click="updatePis()">Update</button></td>
                 </tr>
                 <tr ng-repeat="timer in timers" ng-if="location == 'Timers'">
                     <td>{{timer.date}}</td>
