scripts added to site to run locally, fix for volume changes, add ogg files to list

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -13,9 +13,9 @@
     <title>Device Control</title>
 
     <!-- SCROLLS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="scripts/bootstrap.min.css">
+    <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
     <!-- load bootstrap -->
     <style>
         html {
@@ -86,15 +86,15 @@
     </style>
 
     <!-- load jquery -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+    <script src="scripts/angular.min.js"></script>
 
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-touch.min.js"></script>
+    <script src="scripts/angular-route.js"></script>
+    <script src="scripts/angular-animate.js"></script>
+    <script src="scripts/angular-touch.min.js"></script>
     <script type="text/javascript" src="node_modules/ng-prettyjson/dist/ng-prettyjson.min.js"></script>
     <script type="text/javascript" src="node_modules/ace/ace.js"  charset="utf-8"></script>
     <link rel="stylesheet" type="text/css" href="node_modules/ng-prettyjson/dist/ng-prettyjson.min.css">
-    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
+    <script src="scripts/ui-bootstrap-tpls-2.5.0.js"></script>
 
     <!-- load angular -->
     <script src="core.js"></script>
