--- a/site/public/index.html
+++ b/site/public/index.html
@@ -156,7 +156,7 @@
                     <td><button type="button" class="btn btn-danger" ng-click="openFreePlugsModal()">Show</button></td>
                 </tr>
                 <tr ng-repeat="timer in timers" ng-if="location == 'Timers'">
-                    <td>{{timer.date}}</td>
+                    <td>{{timer.date || timer.days + ' ' +  timer.time}}</td>
                     <td>{{timer.device}}</td>
                     <td>{{timer.action}}</td>
                     <td><button type="button" class="btn btn-danger" ng-click="deleteTimer(timer)">Delete</button></td>
