--- a/site/public/timerModal.html
+++ b/site/public/timerModal.html
@@ -13,7 +13,30 @@
             <td>
                 <button class="btn btn-success" type="button" ng-click="createTimer(device, func);closeModal()">Set</button>
             </td>
-            </tr>
+        </tr>
+	<tr>
+		<td>
+			<div class="col-form-label">Sunrise</div>
+		</td>
+		<td>
+			<button class="btn btn-primary" type="button" ng-click="createDailyTimer(device, func, 'all', 'sunrise');closeModal()">Every Day</button>
+		</td>
+		<td>
+                        <button class="btn btn-warning" type="button" ng-click="createDailyTimer(device, func, 'weekend', 'sunrise');closeModal()">Weekends</button>
+                </td>
+	</tr>
+	<tr>
+                <td>
+                        <div class="col-form-label">Sunset</div>
+                </td>
+                <td>
+                        <button class="btn btn-primary" type="button" ng-click="createDailyTimer(device, func, 'all', 'sunset');closeModal()">Every Day</button>
+                </td>
+                <td>
+                        <button class="btn btn-warning" type="button" ng-click="createDailyTimer(device, func, 'weekend', 'sunset');closeModal()">Weekends</button>
+                </td>
+        </tr>
+		
             </table>
 
 </div>
